/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package k8s.io.api.resource.structured.namedresources.v1alpha1;

import "k8s.io/apimachinery/pkg/api/resource/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "k8s.io/api/resource/structured/namedresources/v1alpha1";

message AllocatedInstance {
  // Name is the name of the selected resource instance.
  optional string name = 1;
}

// AllocationResult is used in AllocationResultModel.
message AllocationResult {
  // Instances identifies all allocated resource instances.
  //
  // +listType=atomic
  // +optional
  repeated AllocatedInstance instances = 1;
}

message Attribute {
  // Name is unique identifier among all resource instances managed by
  // the driver on the node. It must be a DNS subdomain.
  optional string name = 1;

  optional AttributeValue attributeValue = 2;
}

// AttributeValue must have one and only one field set.
message AttributeValue {
  optional k8s.io.apimachinery.pkg.api.resource.Quantity quantityValue = 6;

  optional bool boolValue = 2;

  optional int64 intValue = 7;

  optional Int64Slice intSliceValue = 8;

  optional string stringValue = 5;

  optional StringSlice stringSliceValue = 9;
}

// Filter is used in ResourceFilterModel.
message Filter {
  // Selector is a selector like the one in Request. It must be true for
  // a resource instance to be suitable for a claim using the class.
  optional string selector = 1;
}

message Instance {
  // Name is unique identifier among all resource instances managed by
  // the driver on the node. It must be a DNS subdomain.
  optional string name = 1;

  // Attributes defines the attributes of this resource instance.
  // The name of each attribute must be unique.
  //
  // +listType=atomic
  // +optional
  repeated Attribute attributes = 2;
}

message Int64Slice {
  // +listType=atomic
  repeated int64 ints = 1;
}

// Request is used in ResourceRequestModel.
message Request {
  // Selector is a CEL expression which must evaluate to true if a
  // resource instance is suitable. The language is as defined in
  // https://kubernetes.io/docs/reference/using-api/cel/
  //
  // In addition, for each type in AttributeValue there is a map that
  // resolves to the corresponding value of the instance under evaluation.
  // For example:
  //
  //    attributes.quantity["a"].isGreaterThan(quantity("0")) &&
  //    attributes.stringslice["b"].isSorted()
  optional string selector = 1;
}

// Resources is used in NodeResourceModel.
message Resources {
  // +listType=atomic
  repeated Instance instances = 1;
}

message StringSlice {
  // +listType=atomic
  repeated string strings = 1;
}

